trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -2,8 +2,6 @@
   background: $main;
   display: flex;
   vertical-align: bottom;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,8 +20,8 @@
   top: 40%;
   left: 50%;
   margin: 0 auto;
-  -webkit-transform: none;
-  transform: none;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
   width: 90%;
   max-width: 750px;
